Make Article filters an array.
